@@ -1,17 +1,15 @@
 package net.zerobuilder.compiler.generate;
 
 import com.palantir.javapoet.ClassName;
-import com.palantir.javapoet.FieldSpec;
+import com.palantir.javapoet.MethodSpec;
 import com.palantir.javapoet.TypeSpec;
 import java.util.List;
 import java.util.Set;
 import net.zerobuilder.compiler.generate.DtoGeneratorInput.AbstractGoalInput;
 import net.zerobuilder.compiler.generate.DtoGeneratorInput.BuilderGoalInput;
 import net.zerobuilder.compiler.generate.DtoGeneratorInput.UpdaterGoalInput;
-import net.zerobuilder.compiler.generate.DtoGeneratorOutput.BuilderMethod;
 import net.zerobuilder.compiler.generate.DtoGeneratorOutput.GeneratorOutput;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 public final class Generator {
@@ -27,12 +25,21 @@ public final class Generator {
     if (goals.isEmpty()) {
       throw new IllegalArgumentException("no input");
     }
-    Set<ClassName> generatedType = goals.stream().map(DtoGeneratorInput::getContext).map(GoalContext::generatedType).collect(toSet());
+    Set<ClassName> generatedType = goals.stream()
+        .map(DtoGeneratorInput::getContext)
+        .map(GoalContext::generatedType)
+        .collect(toSet());
     if (generatedType.size() != 1) {
       throw new IllegalArgumentException("generated type is ambiguous");
     }
-    List<ModuleOutput> tmpOutputs = goals.stream().filter(Generator::hasParameters).map(Generator::process).toList();
-    return new GeneratorOutput(methods(tmpOutputs), types(tmpOutputs), fields(tmpOutputs), generatedType.iterator().next());
+    List<ModuleOutput> tmpOutputs = goals.stream()
+        .filter(Generator::hasParameters)
+        .map(Generator::process)
+        .toList();
+    return new GeneratorOutput(
+        methods(tmpOutputs),
+        types(tmpOutputs),
+        generatedType.iterator().next());
   }
 
   static boolean hasParameters(AbstractGoalInput goalInput) {
@@ -42,16 +49,17 @@ public final class Generator {
     };
   }
 
-  private static List<BuilderMethod> methods(List<ModuleOutput> outputs) {
-    return outputs.stream().map(ModuleOutput::method).collect(toList());
+  private static List<MethodSpec> methods(List<ModuleOutput> outputs) {
+    return outputs.stream()
+        .map(ModuleOutput::method)
+        .toList();
   }
 
   private static List<TypeSpec> types(List<ModuleOutput> outputs) {
-    return outputs.stream().map(ModuleOutput::typeSpecs).flatMap(List::stream).toList();
-  }
-
-  private static List<FieldSpec> fields(List<ModuleOutput> outputs) {
-    return outputs.stream().map(ModuleOutput::cacheFields).flatMap(List::stream).toList();
+    return outputs.stream()
+        .map(ModuleOutput::typeSpecs)
+        .flatMap(List::stream)
+        .toList();
   }
 
   private static ModuleOutput process(AbstractGoalInput goalInput) {
@@ -60,7 +68,6 @@ public final class Generator {
       case BuilderGoalInput regular -> regular.module().process(regular.description());
     };
   }
-
 
   private Generator() {
     throw new UnsupportedOperationException("no instances");
