@@ -6,14 +6,11 @@ import com.palantir.javapoet.TypeSpec;
 import java.util.List;
 import java.util.stream.IntStream;
 import net.zerobuilder.compiler.generate.DtoModule.BuilderModule;
-import net.zerobuilder.compiler.generate.ModuleOutput;
 import net.zerobuilder.compiler.generate.DtoRegularGoalDescription.BuilderGoalDescription;
+import net.zerobuilder.compiler.generate.ModuleOutput;
 
 import static com.palantir.javapoet.MethodSpec.constructorBuilder;
 import static com.palantir.javapoet.TypeSpec.classBuilder;
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static javax.lang.model.element.Modifier.FINAL;
 import static javax.lang.model.element.Modifier.PRIVATE;
 import static javax.lang.model.element.Modifier.PUBLIC;
@@ -22,19 +19,23 @@ import static net.zerobuilder.compiler.generate.ZeroUtil.constructor;
 import static net.zerobuilder.compiler.generate.ZeroUtil.transform;
 import static net.zerobuilder.compiler.generate.ZeroUtil.upcase;
 import static net.zerobuilder.modules.builder.Builder.fields;
-import static net.zerobuilder.modules.builder.Generator.builderMethod;
+import static net.zerobuilder.modules.builder.BuilderMethod.builderMethod;
 import static net.zerobuilder.modules.builder.Step.stepInterface;
 
 public final class RegularBuilder implements BuilderModule {
 
-  private static final String MODULE_NAME = "builder";
+  private static final String MODULE_NAME = "Builder";
 
   private List<TypeSpec> stepInterfaces(BuilderGoalDescription description) {
-    return IntStream.range(0, description.parameters().size()).mapToObj(i -> stepInterface(description, i)).collect(toList());
+    return IntStream.range(0, description.parameters().size())
+        .mapToObj(i -> stepInterface(description, i))
+        .toList();
   }
 
   private List<MethodSpec> steps(BuilderGoalDescription description) {
-    return IntStream.range(0, description.parameters().size()).mapToObj(i -> Builder.steps(description, i)).collect(toList());
+    return IntStream.range(0, description.parameters().size())
+        .mapToObj(i -> Builder.steps(description, i))
+        .toList();
   }
 
   static ClassName implType(BuilderGoalDescription description) {
@@ -43,28 +44,43 @@ public final class RegularBuilder implements BuilderModule {
   }
 
   static String methodName(BuilderGoalDescription description) {
-    return description.details().name() + upcase(MODULE_NAME);
+    return description.details().name() + MODULE_NAME;
   }
 
   private TypeSpec defineBuilderImpl(BuilderGoalDescription description) {
-    return classBuilder(implType(description)).addSuperinterfaces(stepInterfaceTypes(description)).addFields(fields.apply(description)).addMethod(constructor()).addMethods(steps(description)).addModifiers(PRIVATE, STATIC, FINAL).build();
+    return classBuilder(implType(description))
+        .addSuperinterfaces(stepInterfaceTypes(description))
+        .addFields(fields(description))
+        .addMethod(constructor())
+        .addMethods(steps(description))
+        .addModifiers(PRIVATE, STATIC, FINAL)
+        .build();
   }
 
   private TypeSpec defineContract(BuilderGoalDescription description) {
-    return classBuilder(contractType(description)).addTypes(stepInterfaces(description)).addModifiers(PUBLIC, STATIC, FINAL).addMethod(constructorBuilder().addStatement("throw new $T($S)", UnsupportedOperationException.class, "no instances").addModifiers(PRIVATE).build()).build();
+    return classBuilder(contractType(description))
+        .addTypes(stepInterfaces(description))
+        .addModifiers(PUBLIC, STATIC, FINAL)
+        .addMethod(constructorBuilder()
+            .addStatement("throw new $T($S)", UnsupportedOperationException.class, "no instances")
+            .addModifiers(PRIVATE).build())
+        .build();
   }
 
   private List<ClassName> stepInterfaceTypes(BuilderGoalDescription description) {
-    return transform(description.parameters(), step -> contractType(description).nestedClass(upcase(step.name())));
+    return transform(description.parameters(),
+        step -> contractType(description).nestedClass(upcase(step.name())));
   }
 
   static ClassName contractType(BuilderGoalDescription description) {
-    String contractName = upcase(description.details().name()) + upcase(MODULE_NAME);
+    String contractName = upcase(description.details().name()) + MODULE_NAME;
     return description.context().generatedType().nestedClass(contractName);
   }
 
   @Override
   public ModuleOutput process(BuilderGoalDescription description) {
-    return new ModuleOutput(builderMethod(description), asList(defineBuilderImpl(description), defineContract(description)), emptyList());
+    return new ModuleOutput(builderMethod(description),
+        List.of(defineBuilderImpl(description),
+            defineContract(description)));
   }
 }
